feat: complete jwt authentication and system configurations